adapter/internal/operator/gateway-api/testdata/securitypolicy-with-oidc-invalid-issuer.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  default/gateway-1:
    proxy:
      listeners:
      - address: null
        name: default/gateway-1/http
        ports:
        - containerPort: 10080
          name: http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          apk.wso2.com/owning-gateway-name: gateway-1
          apk.wso2.com/owning-gateway-namespace: default
      name: default/gateway-1
securityPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: policy-non-exist-secretRef
    namespace: default
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    oidc:
      clientID: client1.apps.foo.bar.com
      clientSecret:
        group: null
        kind: null
        name: client1-secret
      provider:
        issuer: https://httpbin.org/
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: 'Error fetching endpoints from issuer: invalid character ''<'' looking
          for beginning of value'
        reason: Invalid
        status: "False"
        type: Accepted
      controllerName: apk.wso2.com/gatewayclass-controller
xdsIR:
  default/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: false
      name: default/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
